--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dom</title>
 </head>
 <body>
-    
+    <div>
+        <p id="message">Javascript Dom</p>
+        <p id="message">Javascript Dom</p>
+       
+    </div>
+    <input type="radio" name="language" value="JS">
+    <input type="radio" name="language" value="Python">
+
+
+    <div>
+        <h1 class="msg">first heading</h1>
+            <div id="container">
+                <h1 class="msg">second heading</h1>
+                <h1 class="msg">third heading</h1>
+            </div>
+        <h1 class="msg">second heading</h1>
+        <h1 class="msg">third heading</h1>
+        <h1>fourth heading</h1>
+
+
+    </div>
+    <script>
+        // let msg = document.getElementById("message");
+        // console.log(msg);
+        // let btn = document.getElementsByName("language")
+        // console.log(btn);
+        // let heading = document.getElementsByTagName("h1")
+        // console.log(heading);
+        // let cont = document.getElementById("container")
+        // let msg = cont.getElementsByClassName("msg")
+        // console.log(msg);
+        let
+
+    </script>
+    <script src="index.js"></script>
 </body>
 </html>
