--- a/index.html
+++ b/index.html
@@ -26,11 +26,22 @@
         <h1>fourth heading</h1> -->
 
         <!-- traversing to select of an element to use queryselector -->
-            <div class="title">
+            <!-- <div class="title">
                 <p class="child">Welcome </p>
             </div>
 
-            <div class="title1"><p>welcome to myWebsite page1</p><p>welcome to myWebsite page2</p><p>welcome to myWebsite page3</p><p>welcome to myWebsite page4</p></div>
+            <div class="title1"><p>welcome to myWebsite page1</p><p>welcome to myWebsite page2</p><p>welcome to myWebsite page3</p><p>welcome to myWebsite page4</p></div> -->
+
+            <!-- select the next siblings and previous siblings -->
+
+            <div class="title">
+                <p>welcome to page1</p>
+                <p class="second">welcome to page2</p>
+                <p>welcome to page3</p>
+                <p>welcome to page4</p>
+            </div>
+
+
 
     </div>
     <script>
@@ -50,14 +61,18 @@
         // let text = document.querySelector(".child")
         // console.log(text.parentNode);
 
-        let parent = document.querySelector(".title1")
-        console.log(parent.firstChild);
-        console.log(parent.firstElementChild);
-        console.log(parent.lastElementChild);
-        console.log(parent.childNodes);
+        // let parent = document.querySelector(".title1")
+        // console.log(parent.firstChild);
+        // console.log(parent.firstElementChild);
+        // console.log(parent.lastElementChild);
+        // console.log(parent.childNodes);
 
-        //select next siblings,previous siblings of an element
+        // select next siblings,previous siblings of an element
+        let second = document.querySelector(".second")
 
+        console.log(second.previousElementSibling); 
+        console.log(second.nextElementSibling);
+        
 
 
 
