appendchild(),innerHTML,textContent works on the wep page

--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
 
         //manipulating elements
 
-        let div = document.createElement("div");
-        div.innerHTML = "<p>This is new website 1</p>"
 
-        document.body.appendChild(div)
-        div.id = "title"
-        console.log(div);
+        // //createElement()
+        // let div = document.createElement("div");
+        // div.innerHTML = "<p>This is new website 1</p>"
+
+        // document.body.appendChild(div)
+        // div.id = "title"
+        // console.log(div);
         
         
 
