after method,innertext,textcontent works on the web page

--- a/manipulating element.html
+++ b/manipulating element.html
@@ -28,8 +28,10 @@
 
         // menu.textContent = "hello"
 
-        menu.innerHTML = "<p>hello world</p>"
-        menu.textContent = "<p>hello world</p>"
+        // menu.innerHTML = "<p>hello world</p>"
+        // menu.textContent = "<p>hello world</p>"
+
+        menu.after(str)
 
 
     </script>
