--- a/afterelementmethod.html
+++ b/afterelementmethod.html
@@ -41,7 +41,7 @@
         p.innerText = "helloworld";
         strong.innerText = "hello meow";
 
-        myDiv.appendChild(p,strong,mytextNode,'some of the content')
+        myDiv.append(p,strong,mytextNode,'some of the content')
         
         
 
