insertinsertAdjacentHTML(positionname,newNodes)

--- a/afterelementmethod.html
+++ b/afterelementmethod.html
@@ -50,16 +50,18 @@
         
         // parent node
 
-        let menu = document.createElement("div")
+        // let menu = document.createElement("div")
 
-        let p = document.createElement("p")
-        let strong = document.createElement("strong")
+        // let p = document.createElement("p")
+        // let strong = document.createElement("strong")
 
-        menu.append(p)
-        menu.prepend(strong)
+        // menu.append(p)
+        // menu.prepend(strong)
 
-        console.log(menu);
+        // console.log(menu);
 
+        // i
+        let myDiv = document.getElementById("myDiv");myDiv.insertAdjacentHTML("afterbegin","<li>hello</li>");
 
 
         
