--- a/Application/Program/app.html
+++ b/Application/Program/app.html
@@ -17,6 +17,7 @@
 <style>
     * {
         font-family: "Poppins", sans-serif;
+        margin: 0px;
     }
 
     td,
@@ -29,18 +30,21 @@
         font-size: 20px;
         cursor: pointer;
     }
-    .navbar-brand{
-        font-size: 30px;
+
+    img{
+        width: 35px;
+        height: 40px;
     }
+    
 </style>
 
 <body>
-    <nav class="navbar navbar-dark bg-danger">
-        <a href="#" class="text-white navbar-brand  container-fluid py-2">Zomato</a>
+    <nav class="navbar navbar-dark navbar-expand-lg bg-danger p-auto fixed-top">
+        <a href="#" class="text-white navbar-brand  container-fluid ">Zomato</a>
     </nav>
 
-    <section class="container-fluid  mt-2">
-        <h1>Cart:-</h1>
+    <section class="container-fluid  mt-4">
+        <h3>Cart:-</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, expedita corrupti! Accusamus dicta
             repellendus quae ex quia numquam mollitia eos dignissimos delectus temporibus. Quibusdam accusamus
             praesentium amet obcaecati hic deserunt.
