card items,student list

--- a/Application/Program/Me/CRUD Application.html
+++ b/Application/Program/Me/CRUD Application.html
@@ -18,12 +18,15 @@
         float: right;
     }
 
+    .line-through{
+        text-decoration: line-through;
+    }
     
 
 </style>
 <body>
     <nav class="navbar bg-danger container-fluid">
-        <a href="#" class="container-brand text-white">Zomato</a>
+        <a href="#" class="container-brand text-white">📸</a>
         <button class="btn" id="login_id">Login</button>
     </nav>
 
@@ -37,7 +40,7 @@
                         </div>
                         <div class="card-body">
                             <input type="text" class="form-control my-2" id="task-el" placeholder="Task">
-                            <button class="btn btn-info">Add Task</button>
+                            <button class="btn btn-info">Add Task 🍰</button>
                         </div>
                     </form>
                 </div>
@@ -53,6 +56,10 @@
             </div>
         </div>
     </section>
+
+
+
+
     <script src="operation.js"></script>
 </body>
 </html>
